--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <section class="hero">
     <h2>{{ site.description }}</h2>
-    <p>Creating accessible digital experiences and educational resources</p>
+    <p>Using HCI methods to increase AI, media, digital, and misinformation literacies in vulnerable groups.</p>
 </section>
 
 <section id="projects">
@@ -20,6 +20,7 @@ layout: default
                 <li>{{ skill }}</li>
                 {% endfor %}
             </ul>
+            <p class="date">{{project.site-url}}</p>
         </article>
         {% endfor %}
     </div>
