--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
                 <li>{{ skill }}</li>
                 {% endfor %}
             </ul>
-            <a href={{project.site-url}}>More info</p>
+            <a href={{project.site-url}}>More info</a>
         </article>
         {% endfor %}
     </div>
